--- a/templates/room1.html
+++ b/templates/room1.html
@@ -205,7 +205,7 @@
                             ipAddresses.innerHTML = '';
                             ips.forEach(entry => {
                                 const listItem = document.createElement('li');
-                                listItem.textContent = `${entry.username} - ${entry.ip}`;
+                                listItem.textContent = `${entry.username} - ${entry.ip} - ${entry.address}`;
                                 ipAddresses.appendChild(listItem);
                             });
                         })
